# z-shift

./: .gitignore  .gitmodules  AUTO_RIGGING.md  README.md  ROADMAP.md  ROADMAP_20-07.md  phase4-fixes.patch  pyproject.toml
examples/: demo_outcomes_engine.py
scripts/: refinement.py  setup-mast3r.sh  test_harness.py
src/spatial_ingestion/: __init__.py  config.py  main.py
src/spatial_ingestion/batch_normalization/: __init__.py  exif.py  ffmpeg_tools.py  image_processor.py  normalizer.py  video_processor.py  video_sampler.py
src/spatial_ingestion/generation_handoff/: __init__.py  assembler.py  models.py
src/spatial_ingestion/ingestion_gateway/: __init__.py  api.py  auth.py  rate_limit.py
src/spatial_ingestion/live_stream/: __init__.py  buffer.py  manager.py
src/spatial_ingestion/media_classifier/: __init__.py  router.py
src/spatial_ingestion/metadata/: __init__.py  schema.py
src/spatial_ingestion/outcomes_engine/: engine.py
src/spatial_ingestion/reconstruction/: __init__.py  _io.py  alignment.py  cli.py  config.py  device.py  export.py  frame_selection.py  inference.py  jobs.py  models.py  pairing.py  pipeline.py  registry.py
src/spatial_ingestion/reconstruction/backends/: __init__.py  base.py  mast3r.py
src/spatial_ingestion/reconstruction/runners/: __init__.py  _io.py  mast3r.py
src/spatial_ingestion/refinement/: __init__.py  cli.py  core.py
src/spatial_ingestion/resource_tagging/: __init__.py  priority.py
src/spatial_ingestion/storage/: __init__.py  object_store.py
src/spatial_ingestion/sync/: __init__.py  multi_source.py
src/spatial_ingestion/test_harness/: __init__.py  media_factory.py  runner.py
tests/: test_generation_handoff.py  test_io.py  test_mast3r_local_imports.py  test_mast3r_runner.py  test_phase1.py  test_reconstruction_cli.py  test_reconstruction_mast3r.py  test_refinement.py
