[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ingestion-phase1"
version = "0.1.0"
description = "Phase 1 data ingestion and pre-processing engine for 2D-to-3D generation."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pillow>=10.0.0",
  "opencv-python-headless>=4.9.0",
  "numpy>=1.26.0",
  "exifread>=3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
