[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-ingestion-phase1"
version = "0.1.0"
description = "Phase 1 data ingestion and pre-processing engine for 2D-to-3D generation."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pillow>=10.0.0",
  "opencv-python-headless>=4.9.0",
  "numpy<2",
  "exifread>=3.0.0",
  "pyvista>=0.44.0",
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "scipy>=1.13.0",
  "einops>=0.7.0",
  "trimesh>=4.0.0",
  "huggingface-hub[torch]>=0.22,<1.0",
  "packaging>=23.0",
  "roma>=1.5.0",
  "tqdm>=4.66.0",
  "scikit-learn>=1.5.0",
  "pyglet<2",
  "matplotlib>=3.11.0",
]

[project.scripts]
zshift-image-to-3d = "spatial_ingestion.reconstruction.cli:main"
spatial-ingestion-refine = "spatial_ingestion.refinement.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.ty.environment]
python-version = "3.11"
python-platform = "Linux"
extra-paths = ["third_party/mast3r"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.analysis]
allowed-unresolved-imports = ["mast3r.**", "dust3r.**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
